# Touhou-Set-Helper

./: LICENSE.txt  MANIFEST.in  README.md  easy_widgets.py  main.py  requirements.txt  setup.cfg  setup.py
sprites/: credits.txt
