[metadata]
name = Spellcard Set Helper
version = 0.0.0
license = N/A
description = A simple program to keep track caps and misses in Touhou sets.
long_description = file: README.rst
author = okay lol
classifiers=
   Development Status :: 4 - Beta
   Natural Language :: English
   Operating System :: Microsoft :: Windows :: Windows 10
   Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pydub
   tkinter
   PIL
   pynput
   pyperclip
   threading

[options.packages.find]
where=src